# n_body_simulation_like

./: Cargo.toml  README.md
src/: camera_plugin.rs  cube.rs  main.rs  physical_bounds.rs
